feat: Update GitHub Actions workflows to include permissions
The changes in this commit focus on updating the GitHub Actions workflows to include the necessary permissions for the actions to execute successfully.

The key changes are:

- Add `permissions: contents: write, pull-requests: write` to the workflow files to grant the necessary permissions for the actions.
- Update the `dagger publish` command in the `cd-publish-specific-version.yml` workflow to use the full version tag instead of removing the `v` prefix.

These changes will ensure the GitHub Actions workflows can properly publish the Daggerverse modules to the registry.

--- a/.github/workflows/cd-publish-dag-modules.yml
+++ b/.github/workflows/cd-publish-dag-modules.yml
@@ -11,6 +11,11 @@ env:
     GO_VERSION: ~1.22
     DAG_VERSION: 0.12.4
 
+permissions:
+    contents: write
+    pull-requests: write
+
+
 jobs:
     detect-and-publish-modules:
         runs-on: ubuntu-latest
