--- a/.github/workflows/cd-bump-publish-dag-manual.yml
+++ b/.github/workflows/cd-bump-publish-dag-manual.yml
@@ -19,6 +19,10 @@ on:
                     - minor
                     - major
 
+permissions:
+    contents: write
+    pull-requests: write
+
 env:
     GO_VERSION: ~1.22
     DAG_VERSION: 0.12.4
