feat: Add checkout and verification of specific commit for tag
This commit introduces the following changes:

1. Fetch all tags and checkout the specific tag for the module and version being published.
2. Verify that the checked out commit matches the commit for the specified tag.
3. Use the tag directly in the publish command instead of the branch.

These changes ensure that the specific commit corresponding to the published version is used, rather than potentially checking out the wrong commit. This helps to maintain the integrity of the published package and ensures that the correct version is always used.

--- a/.github/workflows/cd-publish-specific-version.yml
+++ b/.github/workflows/cd-publish-specific-version.yml
@@ -96,11 +96,21 @@ jobs:
               run: |
                   module=${{ steps.validate-inputs.outputs.module }}
                   version=${{ steps.validate-inputs.outputs.version }}
+                  tag="${module}/${version}"
 
                   echo "📢 Publishing module: $module with version $version"
 
-                  git checkout "refs/tags/${module}/${version}"
+                  # Fetch all tags and checkout the specific tag
+                  git fetch --all --tags --force
+                  git checkout "refs/tags/$tag"
 
+                  # Verify we're on the correct commit
+                  if [ "$(git rev-parse HEAD)" != "$(git rev-parse refs/tags/$tag)" ]; then
+                    echo "::error::❌ Failed to checkout the correct commit for tag: $tag"
+                    exit 1
+                  fi
+
+                  # Use the tag directly in the publish command
                   if dagger publish -m $module github.com/Excoriate/daggerverse/${module}@${version}; then
                     echo "✅ Successfully published $module version $version to Daggerverse"
                     echo "🔗 Install with: dagger install github.com/Excoriate/daggerverse/${module}@${version}"
@@ -108,6 +118,8 @@ jobs:
                     echo "::error::❌ Failed to publish $module version $version"
                     exit 1
                   fi
+
+
             - name: 🎉 Publish success notification
               if: success()
               run: |
