--- a/.github/workflows/ci-mod-module-template.yaml
+++ b/.github/workflows/ci-mod-module-template.yaml
@@ -26,7 +26,7 @@ jobs:
         strategy:
             matrix:
                 go: ['1.22']
-                dagversion: [0.12.4]
+                dagversion: [0.12.0, 0.12.1, 0.12.2, 0.12.3, 0.12.4]
         name: Lint module-template on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
         runs-on: ubuntu-latest
         steps:
@@ -116,12 +116,12 @@ jobs:
           # Install golangci-lint using curl
             - name: Install golangci-lint
               run: |
-                  curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s latest
-                  sudo mv ./bin/golangci-lint /usr/local/bin/golangci-lint
+                curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s latest
+                sudo mv ./bin/golangci-lint /usr/local/bin/golangci-lint
 
             - name: Run golangci-lint on module-template 📦
               run: |
-                  golangci-lint run --config=../.golangci.yml --verbose
+                golangci-lint run --config=../.golangci.yml --verbose
 
       # Dagger test module 🧪 (develop & golang ci-lint)
             - name: Dagger Develop on Module tests 🧪 module-template with Dagger ${{ matrix.dagversion }}
@@ -135,9 +135,9 @@ jobs:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             - name: Run golangci-lint on module-template/tests 🧪
               run: |
-                  cd tests
-                  ls -ltrah
-                  golangci-lint run --config=../../.golangci.yml --verbose
+                cd tests
+                ls -ltrah
+                golangci-lint run --config=../../.golangci.yml --verbose
 
       # Dagger examples (go) module 📄 (develop & golang ci-lint)
             - name: Dagger Develop on Module Examples/Go 📄 module-template with Dagger ${{ matrix.dagversion }}
@@ -151,9 +151,9 @@ jobs:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             - name: Run golangci-lint on module-template/examples/go 📄 (develop & golang ci-lint)
               run: |
-                  cd examples/go
-                  ls -ltrah
-                  golangci-lint run --config=../../../.golangci.yml --verbose
+                cd examples/go
+                ls -ltrah
+                golangci-lint run --config=../../../.golangci.yml --verbose
 
     module-test:
         strategy:
