fix: Allow replacements for OpenTelemetry logging dependencies in golangci-lint config
This commit updates the `.golangci.yml` configuration file to allow replacements for the OpenTelemetry logging dependencies. This is necessary to address issues with the linting process, which was previously failing due to the use of these dependencies.

The changes include:

- Adding a `modules-download-mode: readonly` option to the `run` section, which ensures that the linter does not attempt to download modules during the linting process.
- Adding a `replace-allow-list` section in the `linters-settings.gomoddirectives` section, which specifies the OpenTelemetry logging dependencies that are allowed to be replaced.

This change will ensure that the golangci-lint process can run successfully without failing due to the use of the OpenTelemetry logging dependencies.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -4,6 +4,12 @@ run:
     modules-download-mode: readonly
     timeout: 240s
 linters-settings:
+    gomoddirectives:
+        replace-allow-list:
+            - go.opentelemetry.io/otel/exporters/otlp/otlplog/otlploggrpc
+            - go.opentelemetry.io/otel/exporters/otlp/otlplog/otlploghttp
+            - go.opentelemetry.io/otel/log
+            - go.opentelemetry.io/otel/sdk/log
     depguard:
         rules:
             Rule not allowed packages:
