--- a/terragrunt/config/presets/base-alpine.yaml
+++ b/terragrunt/config/presets/base-alpine.yaml
@@ -10,12 +10,13 @@ contents:
     - busybox
     - ca-certificates-bundle
     - musl
-    - bash
     - curl
+    - bash
     - wget
     - unzip
     - git
     - tzdata
+    - openssl
 
 accounts:
   groups:
@@ -27,16 +28,18 @@ accounts:
       gid: 65532
   run-as: terragrunt
 
-# entrypoint:
-#   command: /bin/bash
+entrypoint:
+  command: /bin/bash -l
+
+# cmd: /bin/sh -l
 
 archs:
   - x86_64
   - aarch64
 
 environment:
-  PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
-  TERRAGRUNT_PROVIDER_CACHE_DIR: /root/.terragrunt-cache
+  PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/home/terragrunt/bin:/home/terragrunt/.local/bin
+  TERRAGRUNT_PROVIDER_CACHE_DIR: /home/terragrunt/.terragrunt-cache
   TERRAGRUNT_PROVIDER_CACHE: "1"
   TZ: UTC
   LANG: en_US.UTF-8
